Fix footer (align inside elements).

--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -120,7 +120,10 @@ main {
   /* #region layout */
 
   /* #region header */
-
+  header,
+  nav {
+    margin-bottom: 0;
+  }
   /* #endregion header */
 
   /* #region main */
@@ -185,6 +188,7 @@ main {
   nav {
     height: 100%;
     max-width: 200px;
+    margin-bottom: 0;
   }
 
   .nav__top {
@@ -230,11 +234,6 @@ main {
   .main__right {
     display: flex;
     flex-direction: column;
-    justify-content: stretch;
-  }
-
-  .main__bottom {
-    flex-grow: 1;
   }
   /* #endregion main */
 
@@ -243,7 +242,20 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-content: flex-end;
+    align-items: flex-end;
+    padding-right: 18px;
+  }
+
+  .footer__list {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-right: 18px;
+  }
+
+  .footer__list--dash-space {
+    margin-left: 1rem;
   }
 
   .nav__circle-item {
@@ -255,11 +267,25 @@ main {
     width: 30px;
     line-height: 30px;
     text-align: center;
+    margin: 10px 0 10px 10px;
   }
 
   .nav__cart {
     color: #ffffff;
     background-color: gray;
+  }
+
+  .footer__bottom {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-grow: 1;
+    margin-right: 18px;
+  }
+
+  .footer__text {
+    transform: rotate(90deg);
+    transform-origin: right;
   }
   /* #endregion footer */
 
@@ -272,6 +298,14 @@ main {
 
   .dt-none {
     display: none;
+  }
+
+  .dt-relative {
+    position: relative;
+  }
+
+  .dt-absolute {
+    position: absolute;
   }
   /* #endregion modules */
 }
